# WildfireAPI

./: .gitignore  APIs  README  requirements.txt  setup.cfg
src/fireapi/: __init__.py  __main__.py  command.py  commands.py  config.py
