[metadata]
name = fireapi
version = 0.0.0
author = Baldwin, Josiah
author_email = 12803156+MisterEggnog@users.noreply.github.com 
contributor = Stone Pedraza, Cristina
contributor_email = cristinastone12@gmail.com
description = A bot to use fireapi to list local fires
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/katiecasamento/catbot
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: GPL License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
